ANTLRParser.java
// $ANTLR 3.0b8 ANTLR.g 2007-05-11 14:32:24

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/** ANTLR v2 to v3 converter
Currently does this kind of stuff:

new keywords: grammar, tree; must warn with comment.

convert class T extends Parser -> grammar T if combined or
parser grammar T if not

header {...} -> @header {...} and move to action section after grammar.

option names; importVocab -> tokenVocab, buildAST=true -> output=AST

keyword protected->fragment

labels goes from colon to =

literals "abc" -> 'abc'

kill empty strings in tokens; don't need to add to literals table.
tokens {
	"options";
}

add @members to member actions.

add @init to rule actions

comment out return value init expressions

move lexer member action to grammar member area if combined
*/
public class ANTLRParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SEMPRED", "DOC_COMMENT", "STRING_LITERAL", "ACTION", "OPTIONS", "INT", "OR", "CHAR_LITERAL", "RANGE", "TOKENS", "TOKEN_REF", "RCURLY", "OPEN_ELEMENT_OPTION", "CLOSE_ELEMENT_OPTION", "LPAREN", "RPAREN", "BANG", "ARG_ACTION", "COLON", "COMMA", "RULE_REF", "NOT_OP", "TREE_BEGIN", "QUESTION", "STAR", "PLUS", "IMPLIES", "CARET", "WILDCARD", "WS", "SL_COMMENT", "ML_COMMENT", "COMMENT", "ESC", "XDIGIT", "DIGIT", "WS_LOOP", "NESTED_ARG_ACTION", "NESTED_ACTION", "INTERNAL_RULE_REF", "WS_OPT", "'header'", "'='", "';'", "'class'", "'extends'", "'Parser'", "'Lexer'", "'TreeParser'", "'protected'", "'public'", "'private'", "'returns'", "'throws'", "'exception'", "'catch'"
    };
    public static final int COMMA=23;
    public static final int NESTED_ACTION=42;
    public static final int BANG=20;
    public static final int QUESTION=27;
    public static final int OR=10;
    public static final int CLOSE_ELEMENT_OPTION=17;
    public static final int RCURLY=15;
    public static final int NOT_OP=25;
    public static final int CHAR_LITERAL=11;
    public static final int IMPLIES=30;
    public static final int INT=9;
    public static final int STRING_LITERAL=6;
    public static final int RPAREN=19;
    public static final int TOKENS=13;
    public static final int OPTIONS=8;
    public static final int LPAREN=18;
    public static final int PLUS=29;
    public static final int ML_COMMENT=35;
    public static final int DIGIT=39;
    public static final int SL_COMMENT=34;
    public static final int WS_OPT=44;
    public static final int RANGE=12;
    public static final int WS=33;
    public static final int ARG_ACTION=21;
    public static final int TOKEN_REF=14;
    public static final int ACTION=7;
    public static final int WILDCARD=32;
    public static final int COMMENT=36;
    public static final int WS_LOOP=40;
    public static final int CARET=31;
    public static final int ESC=37;
    public static final int OPEN_ELEMENT_OPTION=16;
    public static final int XDIGIT=38;
    public static final int RULE_REF=24;
    public static final int TREE_BEGIN=26;
    public static final int SEMPRED=4;
    public static final int NESTED_ARG_ACTION=41;
    public static final int EOF=-1;
    public static final int INTERNAL_RULE_REF=43;
    public static final int COLON=22;
    public static final int STAR=28;
    public static final int DOC_COMMENT=5;

        public ANTLRParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ANTLR.g"; }


    protected TokenRewriteStream tokens;
    protected Token headerActionToken;
    protected boolean seenParser = false;
    protected boolean combined = false;
    protected Token lastTokenBeforeRules = null;

    public void setTokenBuffer(TokenRewriteStream tokens) {
    	this.tokens = tokens;
    }
    public void setCombined(boolean combined) {
    	this.combined = combined;
    }



    // $ANTLR start antlrGrammar
    // ANTLR.g:55:1: antlrGrammar : ( 'header' STRING_LITERAL ACTION | h= 'header' a= ACTION )* ( optionsSpec )? ( classDef )* EOF ;
    public final void antlrGrammar() throws RecognitionException {
        Token h=null;
        Token a=null;

        try {
            // ANTLR.g:57:2: ( ( 'header' STRING_LITERAL ACTION | h= 'header' a= ACTION )* ( optionsSpec )? ( classDef )* EOF )
            // ANTLR.g:57:2: ( 'header' STRING_LITERAL ACTION | h= 'header' a= ACTION )* ( optionsSpec )? ( classDef )* EOF
            {
            // ANTLR.g:57:2: ( 'header' STRING_LITERAL ACTION | h= 'header' a= ACTION )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==45) ) {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==ACTION) ) {
                        alt1=2;
                    }
                    else if ( (LA1_2==STRING_LITERAL) ) {
                        alt1=1;
                    }


                }


                switch (alt1) {
            	case 1 :
            	    // ANTLR.g:57:5: 'header' STRING_LITERAL ACTION
            	    {
            	    match(input,45,FOLLOW_45_in_antlrGrammar39); 
            	    match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_antlrGrammar41); 
            	    match(input,ACTION,FOLLOW_ACTION_in_antlrGrammar43); 

            	    }
            	    break;
            	case 2 :
            	    // ANTLR.g:58:4: h= 'header' a= ACTION
            	    {
            	    h=(Token)input.LT(1);
            	    match(input,45,FOLLOW_45_in_antlrGrammar50); 
            	    a=(Token)input.LT(1);
            	    match(input,ACTION,FOLLOW_ACTION_in_antlrGrammar54); 
            	    headerActionToken = a; tokens.delete(h,a);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // ANTLR.g:60:2: ( optionsSpec )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==OPTIONS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // ANTLR.g:60:4: optionsSpec
                    {
                    pushFollow(FOLLOW_optionsSpec_in_antlrGrammar65);
                    optionsSpec();
                    _fsp--;


                    }
                    break;

            }

            // ANTLR.g:61:2: ( classDef )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==DOC_COMMENT||LA3_0==ACTION||LA3_0==48) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // ANTLR.g:61:4: classDef
            	    {
            	    pushFollow(FOLLOW_classDef_in_antlrGrammar73);
            	    classDef();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_antlrGrammar79); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end antlrGrammar


    // $ANTLR start classDef
    // ANTLR.g:65:1: classDef : ( ACTION )? ( DOC_COMMENT )? ( lexerSpec | treeParserSpec | parserSpec ) rules ;
    public final void classDef() throws RecognitionException {

        boolean justSawLexer=false;

        try {
            // ANTLR.g:70:2: ( ( ACTION )? ( DOC_COMMENT )? ( lexerSpec | treeParserSpec | parserSpec ) rules )
            // ANTLR.g:70:2: ( ACTION )? ( DOC_COMMENT )? ( lexerSpec | treeParserSpec | parserSpec ) rules
            {
            // ANTLR.g:70:2: ( ACTION )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ACTION) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // ANTLR.g:70:4: ACTION
                    {
                    match(input,ACTION,FOLLOW_ACTION_in_classDef98); 

                    }
                    break;

            }

            // ANTLR.g:71:2: ( DOC_COMMENT )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==DOC_COMMENT) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // ANTLR.g:71:4: DOC_COMMENT
                    {
                    match(input,DOC_COMMENT,FOLLOW_DOC_COMMENT_in_classDef106); 

                    }
                    break;

            }

            // ANTLR.g:72:2: ( lexerSpec | treeParserSpec | parserSpec )
            int alt6=3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==48) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==TOKEN_REF||LA6_1==RULE_REF) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==49) ) {
                        switch ( input.LA(4) ) {
                        case 50:
                            {
                            alt6=3;
                            }
                            break;
                        case 52:
                            {
                            alt6=2;
                            }
                            break;
                        case 51:
                            {
                            alt6=1;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("72:2: ( lexerSpec | treeParserSpec | parserSpec )", 6, 3, input);

                            throw nvae;
                        }

                    }
                    else if ( (LA6_2==47) ) {
                        alt6=3;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("72:2: ( lexerSpec | treeParserSpec | parserSpec )", 6, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("72:2: ( lexerSpec | treeParserSpec | parserSpec )", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("72:2: ( lexerSpec | treeParserSpec | parserSpec )", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // ANTLR.g:72:4: lexerSpec
                    {
                    pushFollow(FOLLOW_lexerSpec_in_classDef114);
                    lexerSpec();
                    _fsp--;

                    justSawLexer=true;

                    }
                    break;
                case 2 :
                    // ANTLR.g:73:4: treeParserSpec
                    {
                    pushFollow(FOLLOW_treeParserSpec_in_classDef121);
                    treeParserSpec();
                    _fsp--;


                    }
                    break;
                case 3 :
                    // ANTLR.g:74:4: parserSpec
                    {
                    pushFollow(FOLLOW_parserSpec_in_classDef126);
                    parserSpec();
                    _fsp--;


                    }
                    break;

            }


            	lastTokenBeforeRules = input.LT(-1);
            	if ( (!combined||(combined&&!justSawLexer)) && headerActionToken!=null ) {
            		tokens.insertAfter(lastTokenBeforeRules,
            			"\n@header "+headerActionToken.getText()+"\n");
            	}
            	
            pushFollow(FOLLOW_rules_in_classDef135);
            rules();
            _fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end classDef

    public static class optionsSpec_return extends ParserRuleReturnScope {
    };

    // $ANTLR start optionsSpec
    // ANTLR.g:86:1: optionsSpec : OPTIONS ( id '=' v= optionValue ';' )* '}' ;
    public final optionsSpec_return optionsSpec() throws RecognitionException {
        optionsSpec_return retval = new optionsSpec_return();
        retval.start = input.LT(1);

        optionValue_return v = null;

        id_return id1 = null;


        try {
            // ANTLR.g:87:4: ( OPTIONS ( id '=' v= optionValue ';' )* '}' )
            // ANTLR.g:87:4: OPTIONS ( id '=' v= optionValue ';' )* '}'
            {
            match(input,OPTIONS,FOLLOW_OPTIONS_in_optionsSpec146); 
            // ANTLR.g:88:3: ( id '=' v= optionValue ';' )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==TOKEN_REF||LA7_0==RULE_REF) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // ANTLR.g:88:5: id '=' v= optionValue ';'
            	    {
            	    pushFollow(FOLLOW_id_in_optionsSpec152);
            	    id1=id();
            	    _fsp--;

            	    match(input,46,FOLLOW_46_in_optionsSpec154); 
            	    pushFollow(FOLLOW_optionValue_in_optionsSpec158);
            	    v=optionValue();
            	    _fsp--;

            	    match(input,47,FOLLOW_47_in_optionsSpec160); 

            	    			if ( input.toString(id1.start,id1.stop).equals("importVocab") )
            	    				tokens.replace(((Token)id1.start), "tokenVocab");
            	    			else if ( input.toString(id1.start,id1.stop).equals("buildAST") )
            	    				tokens.replace(((Token)id1.start), ((Token)v.start), "output=AST");
            	    			

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            match(input,RCURLY,FOLLOW_RCURLY_in_optionsSpec174); 

            		tokens.insertBefore(((Token)retval.start), "/*");
            		tokens.insertAfter(input.LT(-1), "*/"); // .stop not set yet
            		

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end optionsSpec

    public static class optionValue_return extends ParserRuleReturnScope {
    };

    // $ANTLR start optionValue
    // ANTLR.g:108:1: optionValue : ( qualifiedID | STRING_LITERAL | INT | charSet );
    public final optionValue_return optionValue() throws RecognitionException {
        optionValue_return retval = new optionValue_return();
        retval.start = input.LT(1);

        try {
            // ANTLR.g:109:4: ( qualifiedID | STRING_LITERAL | INT | charSet )
            int alt8=4;
            switch ( input.LA(1) ) {
            case TOKEN_REF:
            case RULE_REF:
                {
                alt8=1;
                }
                break;
            case STRING_LITERAL:
                {
                alt8=2;
                }
                break;
            case INT:
                {
                alt8=3;
                }
                break;
            case CHAR_LITERAL:
                {
                alt8=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("108:1: optionValue : ( qualifiedID | STRING_LITERAL | INT | charSet );", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // ANTLR.g:109:4: qualifiedID
                    {
                    pushFollow(FOLLOW_qualifiedID_in_optionValue194);
                    qualifiedID();
                    _fsp--;


                    }
                    break;
                case 2 :
                    // ANTLR.g:110:4: STRING_LITERAL
                    {
                    match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_optionValue199); 

                    }
                    break;
                case 3 :
                    // ANTLR.g:111:4: INT
                    {
                    match(input,INT,FOLLOW_INT_in_optionValue204); 

                    }
                    break;
                case 4 :
                    // ANTLR.g:112:4: charSet
                    {
                    pushFollow(FOLLOW_charSet_in_optionValue209);
                    charSet();
                    _fsp--;


                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end optionValue


    // $ANTLR start charSet
    // ANTLR.g:115:1: charSet : setBlockElement ( OR setBlockElement )* ;
    public final void charSet() throws RecognitionException {
        try {
            // ANTLR.g:116:4: ( setBlockElement ( OR setBlockElement )* )
            // ANTLR.g:116:4: setBlockElement ( OR setBlockElement )*
            {
            pushFollow(FOLLOW_setBlockElement_in_charSet220);
            setBlockElement();
            _fsp--;

            // ANTLR.g:116:20: ( OR setBlockElement )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==OR) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // ANTLR.g:116:22: OR setBlockElement
            	    {
            	    match(input,OR,FOLLOW_OR_in_charSet224); 
            	    pushFollow(FOLLOW_setBlockElement_in_charSet226);
            	    setBlockElement();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end charSet


    // $ANTLR start setBlockElement
    // ANTLR.g:119:1: setBlockElement : CHAR_LITERAL ( RANGE CHAR_LITERAL )? ;
    public final void setBlockElement() throws RecognitionException {
        try {
            // ANTLR.g:120:4: ( CHAR_LITERAL ( RANGE CHAR_LITERAL )? )
            // ANTLR.g:120:4: CHAR_LITERAL ( RANGE CHAR_LITERAL )?
            {
            match(input,CHAR_LITERAL,FOLLOW_CHAR_LITERAL_in_setBlockElement240); 
            // ANTLR.g:120:17: ( RANGE CHAR_LITERAL )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==RANGE) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // ANTLR.g:120:18: RANGE CHAR_LITERAL
                    {
                    match(input,RANGE,FOLLOW_RANGE_in_setBlockElement243); 
                    match(input,CHAR_LITERAL,FOLLOW_CHAR_LITERAL_in_setBlockElement245); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end setBlockElement


    // $ANTLR start tokensSpec
    // ANTLR.g:123:1: tokensSpec : TOKENS ( ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? ) ';' )+ RCURLY ;
    public final void tokensSpec() throws RecognitionException {
        Token s=null;
        Token TOKENS2=null;
        Token RCURLY3=null;

        int n=0;
        try {
            // ANTLR.g:125:4: ( TOKENS ( ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? ) ';' )+ RCURLY )
            // ANTLR.g:125:4: TOKENS ( ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? ) ';' )+ RCURLY
            {
            TOKENS2=(Token)input.LT(1);
            match(input,TOKENS,FOLLOW_TOKENS_in_tokensSpec263); 
            // ANTLR.g:126:4: ( ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? ) ';' )+
            int cnt15=0;
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==STRING_LITERAL||LA15_0==TOKEN_REF) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // ANTLR.g:126:6: ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? ) ';'
            	    {
            	    // ANTLR.g:126:6: ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? )
            	    int alt14=2;
            	    int LA14_0 = input.LA(1);

            	    if ( (LA14_0==TOKEN_REF) ) {
            	        alt14=1;
            	    }
            	    else if ( (LA14_0==STRING_LITERAL) ) {
            	        alt14=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("126:6: ( TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )? | s= STRING_LITERAL ( tokensSpecOptions )? )", 14, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt14) {
            	        case 1 :
            	            // ANTLR.g:126:8: TOKEN_REF ( '=' STRING_LITERAL )? ( tokensSpecOptions )?
            	            {
            	            match(input,TOKEN_REF,FOLLOW_TOKEN_REF_in_tokensSpec272); 
            	            // ANTLR.g:126:18: ( '=' STRING_LITERAL )?
            	            int alt11=2;
            	            int LA11_0 = input.LA(1);

            	            if ( (LA11_0==46) ) {
            	                alt11=1;
            	            }
            	            switch (alt11) {
            	                case 1 :
            	                    // ANTLR.g:126:20: '=' STRING_LITERAL
            	                    {
            	                    match(input,46,FOLLOW_46_in_tokensSpec276); 
            	                    match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_tokensSpec278); 
